# vdu

./: Cargo.toml  README.md  build.sh
cli/: Cargo.toml
cli/src/: main.rs
web/: Cargo.toml
web/src/: lib.rs  vdu.rs
web/src/vdu/: colors.rs  mod.rs
web/www/: index.html  main.js
