[package]
name = "vdu_web"
version = "0.1.0"
authors = ["Remi Bernotavicius <remi@abort.cc>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
bincode = "*"
console_error_panic_hook = "*"
js-sys = "*"
serde = { version = "*", features = ["derive"] }
vdu_path_tree = { version = "*", path = "../library/vdu_path_tree" }
wasm-bindgen = { version = "*" }
wasm-bindgen-futures = "*"

[dependencies.web-sys]
version = "*"
features = [
  "CanvasRenderingContext2d",
  "Document",
  "EventTarget",
  "Headers",
  "HtmlCanvasElement",
  "MouseEvent",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Window",
]
